Changelog for getTables.
1.5.18-alpha
==============
- Исправлена инструкция content для поля таблицы.

1.5.17-alpha
==============
- Исправлена ошибка subtable.

1.5.16-alpha
==============
- добавлено custom modal.

1.5.15-alpha
==============
- Исправлена ошибка subtable.

1.5.14-alpha
==============
- force значения при autosave.

1.5.13-alpha
==============
- Исправлена пагинация.

1.5.12-alpha
==============
- Исправлена ошибка загрузки моделей MODX.

1.5.11-alpha
==============
- Загрузка тригеров из класса модели MODX. 

1.5.10-alpha
==============
- Исправлено сохранение в кеш подтаблицы. 
- Исправлено сохранение в кеш autosave. 
- Добавлены стили для админки. 

1.5.9-alpha
==============
- Исправлено page limit. 

1.5.8-alpha
==============
- Добавлен action copy. 

1.5.7-alpha
==============
- Добавлена инструкция table.export для экспорта таблицы в массив. Помещается в лог pdoTools.
- Исправлено отображение в админке.

1.5.6-alpha
==============
- Восстановил фильтры в GET запросах (При санации запросов была сделана ошибка).

1.5.5-alpha
==============
- Сделаны default и force значения полей.
- Обработка IN в фильтрах.

1.5.4-alpha
==============
- Добавлены редакторы для textarea: ace и ckeditor.

1.5.3-alpha
==============
- Чанк для action.
- Поправлена ошибка проверки существования строки в таблице перед записью.
- Добавлены описания для системных параметров.

1.5.2-alpha
==============
- pdoTools добавлен в зависимости (Автоматически устанавливается при установки пакета.).

1.5.1-alpha
==============
- Исправлен запуск сторонних action.

1.5.0-alpha
==============
- Адаптация для bootstrap v4.

1.4.15-alpha
==============
- Загрузка конфига таблиц из опций.

1.4.14-alpha
==============
- fix css для админки.(Когда-нибудь сделать лучше)

1.4.13-alpha
==============
- решение проблеммы с modx->cacheManager на beget.com(Ошибка с правами!!!)

1.4.5-alpha
==============
- Правки в интеграция в админку MODX.

1.4.0-alpha
==============