@@ -2,6 +2,7 @@ Changelog for getTables.
 1.5.18-alpha
 ==============
 - Исправлена инструкция content для поля таблицы.
+- Исправлена инструкция modal для action.
 
 1.5.17-alpha
 ==============
